Fixed styles on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -559,7 +559,7 @@ input:checked + .slider:before {
     }
 
     #img-credits {
-        margin: 65px 18px 0 18px;
+        margin: 65px 18px 10px 18px;
         text-align: left;
         padding: 0;
     }
